# CannotMy

./: .gitignore  .gitmodules  README.md  WinningRate_Statistics.py  auto_fetch.py  combat_calculator.py  config.py  constants.py  convert_model.py  data_package.py  field_recognition.py  find_monster_zone.py  input_panel_ui.py  loadData.py  main-old.py  main.py  main_old.py  main_sim.py  monster.csv  packaging_requirements.txt  predict.py  predict_onnx.py  pyproject.toml  recognize.py  requirements.txt  sim_mc.py  similar_history_match.py  simular_history_match_ui.py  specialmonster.py  train.py  unit.py  winrt_capture.py  【脚本】铁鲨鱼启动！(带PyTorch版本选择版).bat  一键打包.py  数据打包请运行我.py
simulator/: README.md  battle_field.py  elemental.py  errors.json  gen.py  monsters.json  monsters.py  profile.stats  projectiles.py  scene copy.json  scene.json  simulate.py  stats.py  utils.py  vector2d.py  zone.py
tools/: convert_model.py  data_cleaning_with_field_recognize.py  data_cleaning_with_field_recognize_gpu.py  merge.py  package.py  一键打包.py
tools/battlefield_composite/: .gitignore  battlefield_composite.py  extract_webm_frames.py
tools/battlefield_composite/monster_images/: “复仇者”-默认-战斗-Move-x1.webm  “庞贝”-默认-战斗-Move-x1.webm  “投石机”-默认-战斗-A_Move-x1.webm  “自在”-默认-战斗-Move-x1.webm  “钳钳生风”-默认-战斗-Move-x1.webm  “门”-默认-战斗-Move-x1.webm  “阿咬”-默认-战斗-Move-x1.webm  冰原术师-默认-战斗-Move-x1.webm  冰爆源石虫-默认-战斗-Move-x1.webm  反装甲步兵-默认-战斗-Move_A-x1.webm  变异巨岩蛛-默认-战斗-Move-x1.webm  呼啸骑士团学徒-默认-战斗-Move-x1.webm  固海凿石者-默认-战斗-Move-x1.webm  复仇者-默认-战斗-Move-x1.webm  宿主拾荒者-默认-战斗-Move-x1.webm  富营养的穿刺者-默认-战斗-Move-x1.webm  山海众窥魅人-默认-战斗-Move-x1.webm  山雪鬼-默认-战斗-Move-x1.webm  弧光锋卫长-默认-战斗-Move-x1.webm  扎罗，“狼之主”-默认-战斗-A_Move-x1.webm  拳手囚犯-默认-战斗-Move_red-x1.webm  提亚卡乌好战者-默认-战斗-Move-x1.webm  提亚卡乌破坏王-默认-战斗-Move-x1.webm  散华骑士团学徒-默认-战斗-Move-x1.webm  朗姆酒推荐者-默认-战斗-Move-x1.webm  木裂战士-默认-战斗-Move-x1.webm  杰斯顿·威廉姆斯-默认-战斗-C1_Move-x1.webm  染污躯壳-默认-战斗-Move-x1.webm  残党萨克斯手-默认-战斗-Move-x1.webm  沸血骑士团精锐-默认-战斗-Move-x1.webm  泥岩巨像-默认-战斗-Move-x1.webm  深溟裂礁者-默认-战斗-Move-x1.webm  温顺的武装驮兽-默认-战斗-Move-x1.webm  湖畔志愿者-默认-战斗-Move-x1.webm  源石畸变体-默认-战斗-Move-x1.webm  灰尾香主-默认-战斗-Move-x1.webm  炮击组长-默认-战斗-Attack-x1.webm  炮击组长-默认-战斗-Move-x1.webm  烈酒级醒酒助手-默认-战斗-Move-x1.webm  狂暴宿主组长-默认-战斗-Move-x1.webm  (+16 more)
tools/battlefield_recognize/: class_to_idx.json  场地识别字段说明.txt
