[project]
name = "CannotMax-Honeydew"
version = "0.1.0"
description = "这是一个基于深度学习的明日方舟游戏辅助工具，用于自动识别游戏画面中的单位并预测战斗结果。"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "keyboard",
    "matplotlib",
    "numpy",
    "onnxruntime",
    "opencv-python",
    "pandas",
    "pillow",
    "pyqt6",
    "rapidocr",
    "scikit-learn",
    "seaborn",
]

[tool.uv]
python-install-mirror = "https://mirror.nju.edu.cn/github-release/astral-sh/python-build-standalone/"

[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
default = true

[dependency-groups]
dev = [
    "pyinstaller>=6.15.0",
    "toml>=0.10.2",
]

[project.optional-dependencies]
cpu = [
  "torch",
  "torchvision",
]
cu128 = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true